# optimize-python-example

./: LICENSE  README.md  pyproject.toml  pyproject.yml  setup.py  subtract.c  sum.cpp  sum.py
operations/: __init__.py  difference.c  operations.py
pyoptexample/: __init__.py  difference.c  operations.py  sum.cpp
