[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "operations"
version = "0.1"
authors = [
  { name="Eric J Drewitz"},
]
description = "Practicing optimizing Python with C/C++"
readme = "README.md"
keywords = ["optimization"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Optimization",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
