[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoptexample"
version = "0.2"
authors = [
  {name="Eric J Drewitz"},
]
description = "Practicing optimizing Python with C/C++"
readme = "README.md"
license = "MIT"
keywords = ["optimization"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]

[tool.setuptools.package-data]
pyoptexample = ["*.dll", "*.so"] # Include all .dll and .so files within my_package [pyoptexample]
